link to css file

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<html>
+  <link rel="stylesheet" href="styles.css">
+<body>
 <div class="container">
   <h1 style="place-self: center;">
   🐈‍⬛  Mel's Grimoire 🔮
@@ -180,3 +183,5 @@ Hello, I'm Mel✌️ A wicca with a love for nature and an aesthetically clean u
     </div>
     </div>
   </div>
+</body>
+</html>
