--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
+  <head>
   <link rel="stylesheet" href="styles.css">
+    </head>
 <body>
 <div class="container">
   <h1 style="place-self: center;">
