insert favicon index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
   <head>
-  <link rel="stylesheet" href="styles.css">
-    </head>
+    <title> Mel's Grimoire </title>
+    <link rel="icon" type="image" href="/images/favicon.png">
+    <link rel="stylesheet" href="styles.css">
+  </head>
 <body>
 <div class="container">
   <h1 style="place-self: center;">
