--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title> Mel's Grimoire </title>
-    <link rel="icon" type="image" href="/images/favicon.png">
+    <link rel="icon" type="image/png" href="/images/favicon.png">
     <link rel="stylesheet" href="styles.css">
   </head>
 <body>
