--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
     <title> Mel's Grimoire </title>
-    <link rel="icon" type="image/png" href="/images/favicon.png">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="/images/favicon.png"/>
+    <link rel="stylesheet" href="styles.css"/>
   </head>
 <body>
 <div class="container">
